--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -4,12 +4,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-inline: 10px;
 }
 
 .button-container {
   display: flex;
-  padding: 0 10px;
-  gap: 20px;
+  gap: 10px;
 }
 
 .button-container button {
@@ -20,6 +20,7 @@
   border: none;
   font-size: 1.3em;
   gap: 5px;
+  padding: 0 10px;
   font-weight: 900;
   font-family: "Orbitron", sans-serif;
 }
