--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -3,12 +3,12 @@
   justify-content: flex-end;
   gap: 10px;
   width: 50%;
-  border: 1px solid hsl(0, 0%, 89%);
+  border: 1px solid var(--border-light);
   border-radius: 5px;
 }
 
 .search-container:focus-within {
-  outline: 1px solid hsl(0, 0%, 0%);
+  outline: 1px solid var(--black);
 }
 
 .search-container input {
@@ -26,8 +26,9 @@
   justify-content: center;
   align-items: center;
   padding: 5px 10px;
-  background-color: hsl(0, 0%, 89%);
+  background-color: var(--light-container);
   border: none;
+  cursor: pointer;
 }
 
 @media (max-width: 1000px) {
