--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -1,12 +1,13 @@
 .sidebar-container {
   height: calc(100vh - 70px);
-  padding: 20px;
   display: flex;
+  padding: 20px;
   flex-direction: column;
   border-right: 1px solid hsl(0 0% 90%);
-  position: fixed;
-  bottom: 0;
+  flex-grow: 0;
+  margin-top: 70px;
   gap: 20px;
+  background-color: white;
 }
 
 .sidebar-container button {
@@ -49,11 +50,14 @@ button.active {
   .sidebar-container {
     height: auto;
     flex-direction: row;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     justify-content: space-around;
     border-right: 0;
     padding: 10px 20px;
     border-top: 1px solid var(--border-light);
+    z-index: 1;
   }
 
   .sidebar-container button {
@@ -62,7 +66,7 @@ button.active {
 
   .sidebar-container span,
   .sidebar-container span.active {
-    display: none !important;
+    display: none;
   }
 
   .sidebar-container small {
