--- a/src/css/VideoItem.css
+++ b/src/css/VideoItem.css
@@ -4,15 +4,23 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  border-radius: 20px;
+  transition: 0.2s ease-in-out;
+}
+
+.videoitem-container:hover {
+  background-color: var(--light-container);
 }
 
 .videoitem-container img {
   width: 100%;
+  border-radius: 20px;
 }
 
 .video-info {
   display: flex;
   width: 100%;
+  padding: 10px;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 10px;
