--- a/src/css/VideoList.css
+++ b/src/css/VideoList.css
@@ -9,8 +9,27 @@
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
+.videolist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  overflow: auto;
+  padding: 10px;
+  gap: 10px;
+}
+
 @media (max-width: 1000px) {
   .videolist-container {
     padding-bottom: 100px;
+  }
+
+  .videolist {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    overflow: visible;
+    width: 100%;
   }
 }
