--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap");
 
 :root {
-  --black: hsl(0 0% 0%);
-  --border-light: hsl(0 0% 90%);
-  --light-container: var(--border-light);
+  --dark-bg: hsl(0 0% 20%);
+  --light-bg: hsl(0 0% 100%);
+  --dark: hsl(0 0% 0%);
+  --light: hsl(0 0% 90%);
+  --dark-container: hsl(0 0% 30%);
+  --light-container: var(--light);
 }
 
 * {
@@ -17,8 +20,36 @@
   width: 100%;
   min-height: 100vh;
   min-height: 100svh;
+  background-color: var(--light-bg);
+  transition: 0.5s ease-in-out;
 }
 
 .content {
   display: flex;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px var(--light-container);
+  background-color: transparent;
+  padding: 0 5px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark);
+  box-shadow: inset 2px 0 12px var(--light-container);
+  border-radius: 10px;
+}
+
+@media (max-width: 1000px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.app-container.dark {
+  background-color: var(--dark-bg);
 }
