--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -3,11 +3,12 @@
   display: flex;
   padding: 20px;
   flex-direction: column;
-  border-right: 1px solid hsl(0 0% 90%);
+  border-right: 1px solid var(--light);
   flex-grow: 0;
   margin-top: 70px;
   gap: 20px;
-  background-color: white;
+  background-color: var(--light-bg);
+  transition: 0.5s ease-in-out;
 }
 
 .sidebar-container button {
@@ -19,6 +20,8 @@
   border: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  color: var(--dark);
+  transition: 0.5s ease-in-out;
 }
 
 .sidebar-container button:hover {
@@ -46,6 +49,14 @@ button.active {
   justify-content: center;
 }
 
+.dark .sidebar-container {
+  background-color: var(--dark-bg);
+}
+
+.dark .sidebar-container button {
+  color: var(--light);
+}
+
 @media (max-width: 1000px) {
   .sidebar-container {
     height: auto;
@@ -56,7 +67,7 @@ button.active {
     justify-content: space-around;
     border-right: 0;
     padding: 10px 20px;
-    border-top: 1px solid var(--border-light);
+    border-top: 1px solid var(--light);
     z-index: 1;
   }
 
