--- a/src/css/VideoItem.css
+++ b/src/css/VideoItem.css
@@ -1,7 +1,7 @@
 .videoitem-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 10px;
   border-radius: 20px;
