Removed warnings for netlify upload

--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -13,7 +13,7 @@
 
 .sidebar-container button {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   gap: 20px;
   background-color: transparent;
